# agentic-cuts

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  README.md  brand-kit.example.yaml  pyproject.toml  requirements.txt  setup-tenant.sh
agentic_cuts/: __init__.py  cli.py
agentic_cuts/captions/: __init__.py  cinematic-fade.json  comedy-zoom.json  courtroom-mono.json  dark-mode-neon.json  documentary-subtitle.json  educational-clear.json  hormozi-style.json  ig-reel-classic.json  kinetic-bounce.json  luxury-serif.json  meme-impact.json  minimal-white.json  mr-beast-pop.json  news-ticker.json  podcast-clean.json  quote-card.json  tiktok-emoji-burst.json  tiktok-yellow-bold.json  vlog-handwritten.json  youtube-shorts-clean.json
agentic_cuts/lib/: __init__.py  base_tool.py  brand_kit.py  caption_preset.py  checkpoint.py  cost_tracker.py  delivery_promise.py  frame_perfect_cut.py  media_profiles.py  pipeline_loader.py  pipeline_manifest.py  run_cache.py  scoring.py  skill_rag.py  slideshow_risk.py  tool_registry.py
agentic_cuts/pipelines/: __init__.py  animated-explainer.yaml  avatar-dub.yaml  clip-factory.yaml  documentary-montage.yaml  podcast-repurpose.yaml  talking-head.yaml
agentic_cuts/tools/: __init__.py
apps/timeline-ui/: .gitignore  README.md  (+3 more)
docs/: CONVERSATIONAL-VIDEO-ARCHITECTURE.md
skills/: INDEX.md
tests/: test_base_tool_and_registry.py  test_brand_kit.py  test_caption_presets.py  test_checkpoint_and_caches.py  test_cli.py  test_cost_tracker.py  test_pipelines.py  test_provider_tools.py  test_quality_gates.py  test_smoke.py
(+81 files in other folders)
